builder insert element spacing fix

--- a/assets/src/scss/layout/admin/builder/_builder_style.scss
+++ b/assets/src/scss/layout/admin/builder/_builder_style.scss
@@ -1753,7 +1753,7 @@ div[draggable="true"].cptm-form-builder-group-title-area {
   padding: 10px 16px;
   margin: 0;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   flex-wrap: wrap;
   list-style: none;
   background-color: #ffffff;
